// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`no comments > failure > command.issueCommand 1`] = `[]`;

exports[`no comments > failure > core.info 1`] = `
[
  [
    "pyright 1.1.240, node v20.8.1, pyright-action 1.1.0",
  ],
  [
    "Working directory: /some/wd",
  ],
  [
    "Running: /path/to/node /path/to/pyright/dist/index.js --outputjson",
  ],
]
`;

exports[`no comments > failure > core.setFailed 1`] = `
[
  [
    "Exit code 1",
  ],
]
`;

exports[`no comments > failure > cp.spawnSync 1`] = `
[
  [
    "/path/to/node",
    [
      "/path/to/pyright/dist/index.js",
      "--outputjson",
    ],
    {
      "stdio": [
        "ignore",
        "inherit",
        "inherit",
      ],
    },
  ],
]
`;

exports[`no comments > failure > process.chdir 1`] = `
[
  [
    "/some/wd",
  ],
]
`;

exports[`no comments > success > command.issueCommand 1`] = `[]`;

exports[`no comments > success > core.info 1`] = `
[
  [
    "pyright 1.1.240, node v20.8.1, pyright-action 1.1.0",
  ],
  [
    "Working directory: /some/wd",
  ],
  [
    "Running: /path/to/node /path/to/pyright/dist/index.js --outputjson",
  ],
]
`;

exports[`no comments > success > core.setFailed 1`] = `[]`;

exports[`no comments > success > cp.spawnSync 1`] = `
[
  [
    "/path/to/node",
    [
      "/path/to/pyright/dist/index.js",
      "--outputjson",
    ],
    {
      "stdio": [
        "ignore",
        "inherit",
        "inherit",
      ],
    },
  ],
]
`;

exports[`no comments > success > process.chdir 1`] = `
[
  [
    "/some/wd",
  ],
]
`;

exports[`thrown error at first call > command.issueCommand 1`] = `[]`;

exports[`thrown error at first call > core.info 1`] = `[]`;

exports[`thrown error at first call > core.setFailed 1`] = `
[
  [
    [Error: oops],
  ],
]
`;

exports[`thrown error at first call > cp.spawnSync 1`] = `[]`;

exports[`thrown error at first call > process.chdir 1`] = `[]`;

exports[`with comments > failure > command.issueCommand 1`] = `[]`;

exports[`with comments > failure > core.info 1`] = `
[
  [
    "pyright 1.1.240, node v20.8.1, pyright-action 1.1.0",
  ],
  [
    "Working directory: /some/wd",
  ],
  [
    "Running: /path/to/node /path/to/pyright/dist/index.js --outputjson",
  ],
]
`;

exports[`with comments > failure > core.setFailed 1`] = `
[
  [
    "Exit code 2",
  ],
]
`;

exports[`with comments > failure > cp.spawnSync 1`] = `
[
  [
    "/path/to/node",
    [
      "/path/to/pyright/dist/index.js",
      "--outputjson",
    ],
    {
      "encoding": "utf8",
      "maxBuffer": 104857600,
      "stdio": [
        "ignore",
        "pipe",
        "inherit",
      ],
    },
  ],
]
`;

exports[`with comments > failure > process.chdir 1`] = `[]`;

exports[`with comments > invalid stdout > command.issueCommand 1`] = `[]`;

exports[`with comments > invalid stdout > core.info 1`] = `
[
  [
    "pyright 1.1.240, node v20.8.1, pyright-action 1.1.0",
  ],
  [
    "Working directory: /some/wd",
  ],
  [
    "Running: /path/to/node /path/to/pyright/dist/index.js --outputjson",
  ],
]
`;

exports[`with comments > invalid stdout > core.setFailed 1`] = `
[
  [
    [ValitaError: missing_value at .generalDiagnostics (missing value) (+ 1 other issue)],
  ],
]
`;

exports[`with comments > invalid stdout > cp.spawnSync 1`] = `
[
  [
    "/path/to/node",
    [
      "/path/to/pyright/dist/index.js",
      "--outputjson",
    ],
    {
      "encoding": "utf8",
      "maxBuffer": 104857600,
      "stdio": [
        "ignore",
        "pipe",
        "inherit",
      ],
    },
  ],
]
`;

exports[`with comments > invalid stdout > process.chdir 1`] = `[]`;

exports[`with comments > no diagnostics > command.issueCommand 1`] = `[]`;

exports[`with comments > no diagnostics > core.info 1`] = `
[
  [
    "pyright 1.1.240, node v20.8.1, pyright-action 1.1.0",
  ],
  [
    "Working directory: /some/wd",
  ],
  [
    "Running: /path/to/node /path/to/pyright/dist/index.js --outputjson",
  ],
  [
    "0 errors, 0 warnings, 0 informations",
  ],
]
`;

exports[`with comments > no diagnostics > core.setFailed 1`] = `[]`;

exports[`with comments > no diagnostics > cp.spawnSync 1`] = `
[
  [
    "/path/to/node",
    [
      "/path/to/pyright/dist/index.js",
      "--outputjson",
    ],
    {
      "encoding": "utf8",
      "maxBuffer": 104857600,
      "stdio": [
        "ignore",
        "pipe",
        "inherit",
      ],
    },
  ],
]
`;

exports[`with comments > no diagnostics > process.chdir 1`] = `[]`;

exports[`with comments > unparsable json > command.issueCommand 1`] = `[]`;

exports[`with comments > unparsable json > core.info 1`] = `
[
  [
    "pyright 1.1.240, node v20.8.1, pyright-action 1.1.0",
  ],
  [
    "Working directory: /some/wd",
  ],
  [
    "Running: /path/to/node /path/to/pyright/dist/index.js --outputjson",
  ],
]
`;

exports[`with comments > unparsable json > core.setFailed 1`] = `
[
  [
    [SyntaxError: Unexpected token '}', "}" is not valid JSON],
  ],
]
`;

exports[`with comments > unparsable json > cp.spawnSync 1`] = `
[
  [
    "/path/to/node",
    [
      "/path/to/pyright/dist/index.js",
      "--outputjson",
    ],
    {
      "encoding": "utf8",
      "maxBuffer": 104857600,
      "stdio": [
        "ignore",
        "pipe",
        "inherit",
      ],
    },
  ],
]
`;

exports[`with comments > unparsable json > process.chdir 1`] = `[]`;

exports[`with comments > with 1 each > command.issueCommand 1`] = `
[
  [
    "error",
    {
      "col": 1,
      "file": "/path/to/file1.py",
      "line": 1,
    },
    "some error",
  ],
  [
    "warning",
    {
      "col": 1,
      "file": "/path/to/file2.py",
      "line": 1,
    },
    "some warning",
  ],
]
`;

exports[`with comments > with 1 each > core.info 1`] = `
[
  [
    "pyright 1.1.240, node v20.8.1, pyright-action 1.1.0",
  ],
  [
    "Working directory: /some/wd",
  ],
  [
    "Running: /path/to/node /path/to/pyright/dist/index.js --outputjson",
  ],
  [
    "/path/to/file1.py:1:1 - error: some error",
  ],
  [
    "/path/to/file2.py: warning: some warning",
  ],
  [
    "/path/to/file3.py:1:1 - information: some info (reportSomeInformation)",
  ],
  [
    "1 error, 1 warning, 1 information",
  ],
]
`;

exports[`with comments > with 1 each > core.setFailed 1`] = `
[
  [
    "1 error",
  ],
]
`;

exports[`with comments > with 1 each > cp.spawnSync 1`] = `
[
  [
    "/path/to/node",
    [
      "/path/to/pyright/dist/index.js",
      "--outputjson",
    ],
    {
      "encoding": "utf8",
      "maxBuffer": 104857600,
      "stdio": [
        "ignore",
        "pipe",
        "inherit",
      ],
    },
  ],
]
`;

exports[`with comments > with 1 each > process.chdir 1`] = `[]`;

exports[`with comments > with diagnostics > command.issueCommand 1`] = `
[
  [
    "error",
    {
      "col": 1,
      "file": "/path/to/file1.py",
      "line": 1,
    },
    "some error",
  ],
  [
    "warning",
    {
      "col": 1,
      "file": "/path/to/file2.py",
      "line": 1,
    },
    "some warning",
  ],
  [
    "warning",
    {
      "col": 1,
      "file": "/path/to/file3.py",
      "line": 1,
    },
    "another warning (reportSomeWarning)",
  ],
  [
    "error",
    {
      "col": 10,
      "file": "/path/to/file1.py",
      "line": 6,
    },
    "some error",
  ],
]
`;

exports[`with comments > with diagnostics > core.info 1`] = `
[
  [
    "pyright 1.1.240, node v20.8.1, pyright-action 1.1.0",
  ],
  [
    "Working directory: /some/wd",
  ],
  [
    "Running: /path/to/node /path/to/pyright/dist/index.js --outputjson",
  ],
  [
    "/path/to/file1.py:1:1 - error: some error",
  ],
  [
    "/path/to/file2.py: warning: some warning",
  ],
  [
    "/path/to/file3.py:1:1 - information: some info (reportSomeInformation)",
  ],
  [
    "/path/to/file3.py: warning: another warning (reportSomeWarning)",
  ],
  [
    "/path/to/file1.py:6:10 - error: some error",
  ],
  [
    "2 errors, 2 warnings, 1 information",
  ],
]
`;

exports[`with comments > with diagnostics > core.setFailed 1`] = `
[
  [
    "2 errors",
  ],
]
`;

exports[`with comments > with diagnostics > cp.spawnSync 1`] = `
[
  [
    "/path/to/node",
    [
      "/path/to/pyright/dist/index.js",
      "--outputjson",
    ],
    {
      "encoding": "utf8",
      "maxBuffer": 104857600,
      "stdio": [
        "ignore",
        "pipe",
        "inherit",
      ],
    },
  ],
]
`;

exports[`with comments > with diagnostics > process.chdir 1`] = `[]`;
